# ML_double_exchange

./: LICENSE  README.md
bond_chirality/: CMakeLists.txt  analysis.h  help_function.h  lattice_base.h  main.cpp  real_dynamics.h  torch_net.h
simulation/de_c_pure/: CMakeLists.txt  analysis.h  lattice_base.h  main.cpp
simulation/de_python_pure_large_size/: constant.py  de_c_pure  main.py  test_bond_analysis.py
simulation/de_python_pure_large_size/data_input/: bond_sq26_3only_75_466_30.csv
simulation/de_python_pure_large_size/snapshot_save/: screenshot_0.csv  screenshot_1.csv  screenshot_2.csv  screenshot_3.csv  screenshot_4.csv  screenshot_5.csv
training/: bond_analysis.py  constant.py  help.py  main.py  test_bond_analysis.py
training/data_input/: neighbor_30.csv
training_data_sample/: plot_spin.m
